<resources>
    <string name="app_name">MyModules</string>
    <string name="modules">Esta\'s Modules</string>
    <string name="C110">C110 Programming Fundamentals I</string>
    <string name="C203">C203 Web Appln Development in php</string>
    <string name="C206">C206 Software Development Process</string>
    <string name="C218">C218 UI/UX Design for Apps</string>
    <string name="C346">C346 Mobile App Development</string>
    <string name="G953">G953 Life Skills III</string>
    <string name="back_button_text">Back to Modules</string>
    <string name="module_code">Module Code: %s</string>
    <string name="module_name">Module Name: %s</string>
    <string name="academic_year">Academic Year: %s</string>
    <string name="semester">Semester: %s</string>
    <string name="module_credit">Module Credit: %s</string>
    <string name="venue">Venue: %s</string>
    <string name="G953_code">G953</string>
    <string name="G953_name">Life Skills III\t</string>
    <string name="G953_academic_year">AY 2023</string>
    <string name="G953_semester">Semester 1</string>
    <string name="G953_credit">1</string>
    <string name="G953_venue">HB02</string>
    <string name="C110_code">C110</string>
    <string name="C110_name">Programming Fundamentals I</string>
    <string name="C110_academic_year">AY 2023</string>
    <string name="C110_semester">Semester 1</string>
    <string name="C110_credit">4</string>
    <string name="C110_venue">W65F</string>
    <string name="C203_code">C203</string>
    <string name="C203_name">Web Application Development in php</string>
    <string name="C203_academic_year">AY 2023</string>
    <string name="C203_semester">Semester 1</string>
    <string name="C203_credit">4</string>
    <string name="C203_venue">W64P</string>
    <string name="C206_code">C206</string>
    <string name="C206_name">Software Development Process</string>
    <string name="C206_academic_year">AY 2023</string>
    <string name="C206_semester">Semester 1</string>
    <string name="C206_credit">4</string>
    <string name="C206_venue">W64P</string>
    <string name="C218_code">C218</string>
    <string name="C218_name">UI/UX Design for Apps</string>
    <string name="C218_academic_year">UI/UX Design for Apps\t</string>
    <string name="C218_semester">Semester 1</string>
    <string name="C218_credit">4</string>
    <string name="C218_venue">W64P</string>
    <string name="C346_code">C346</string>
    <string name="C346_name">UI/UX Design for Apps</string>
    <string name="C346_academic_year">AY 2023</string>
    <string name="C346_semester">Semester 1</string>
    <string name="C346_credit">4</string>
    <string name="C346_venue">E63A</string>

</resources>