<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/modules"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:typeface="normal" />

            <Button
                android:id="@+id/C110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:paddingBottom="6dp"
                android:text="@string/C110"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/C203"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:paddingBottom="6dp"
                android:text="@string/C203"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/C206"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:paddingBottom="6dp"
                android:text="@string/C206"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/C218"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:paddingBottom="6dp"
                android:text="@string/C218"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/C346"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:paddingBottom="6dp"
                android:text="@string/C346"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/G953"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:paddingBottom="6dp"
                android:text="@string/G953"
                android:textAlignment="viewStart" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
